--- a/app/src/main/res/layout/fragment_detail_playlist.xml
+++ b/app/src/main/res/layout/fragment_detail_playlist.xml
@@ -18,19 +18,20 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:paddingLeft="30dp"
             android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/btnBack"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:paddingLeft="13dp"
-                android:background="#00000000"
-                app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
-        </LinearLayout>
+                android:paddingLeft="20dp"
+                android:background="@drawable/baseline_arrow_back_ios_24" />
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/imgPlayListDetail"
