--- a/app/src/main/res/layout/fragment__play__track.xml
+++ b/app/src/main/res/layout/fragment__play__track.xml
@@ -79,14 +79,9 @@
                 android:src="@drawable/avt" />
         </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="40dp"
-            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:layout_weight="6"
                 android:gravity="center_vertical"
@@ -94,26 +89,34 @@
 
                 <TextView
                     android:id="@+id/tvNameTrackPlay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:text="À Lôi"
-                    android:textColor="@color/white"
-                    android:textSize="27dp"
-                    android:textStyle="bold" />
+                    android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Instagram (feat. Vu Thanh Van)"
+                android:textColor="@color/white"
+                android:textSize="27dp"
+                android:textStyle="bold"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:singleLine="true"
+                    android:scrollHorizontally="true"
+                    android:marqueeRepeatLimit ="marquee_forever"/>/>
 
                 <TextView
                     android:id="@+id/tvNameArtistPlay"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Double 2T"
-                    android:textColor="@color/white"
-                    android:textSize="18dp" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Double 2T"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:singleLine="true"
+                    android:scrollHorizontally="true"
+                    android:marqueeRepeatLimit ="marquee_forever"/>/>
             </LinearLayout>
 
 
-        </LinearLayout>
 
         <SeekBar
             android:id="@+id/seekBar"
