--- a/app/src/main/res/layout/fragment__search.xml
+++ b/app/src/main/res/layout/fragment__search.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
+        android:padding="20dp"
         android:orientation="vertical">
 
 
@@ -78,8 +78,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="50dp"
-            android:layout_marginTop="10dp"
-            android:paddingLeft="20dp">
+            android:layout_marginLeft="-7dp"
+            android:layout_marginTop="10dp">
             <TextView
                 android:id="@+id/tvhttgd"
                 android:layout_width="match_parent"
