--- a/app/src/main/res/layout/layout_item_grid_search.xml
+++ b/app/src/main/res/layout/layout_item_grid_search.xml
@@ -33,6 +33,7 @@
         android:text="TextView"
         android:textAlignment="gravity"
         android:textColor="#FFFFFF"
+        android:singleLine="true"
         android:textStyle="bold"
         android:textSize="17sp" />
     <TextView
@@ -42,6 +43,7 @@
         android:layout_marginTop="5dp"
         android:gravity="fill|center_vertical"
         android:text="TextView"
+        android:singleLine="true"
         android:textAlignment="gravity"
         android:textColor="#AEAEAE"
         android:textSize="14sp" />
