--- a/app/src/main/res/layout/fragment__library.xml
+++ b/app/src/main/res/layout/fragment__library.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black"
+    android:background="@drawable/gradient_backgroundlight"
+    android:padding="15dp"
     tools:context=".Fragment_Library">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,21 +13,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
             android:orientation="vertical">
-
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/appBarLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/black"
-                android:theme="@style/MaterialAlertDialog.Material3">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -57,7 +50,6 @@
                         android:layout_marginLeft="20dp"
                         android:textSize="26sp"/>
                 </LinearLayout>
-            </com.google.android.material.appbar.AppBarLayout>
         </LinearLayout>
 
         <LinearLayout
